Adding Grunt Automation

--- a/dev_secret.env
+++ b/dev_secret.env
@@ -1,9 +1,9 @@
-export SECRET=secret
+export SECRET='secret'
 
-export REDIS_HOST=localhost-redis
+export REDIS_HOST='localhost-redis'
 export REDIS_PORT=6379
 
-export RABBITMQ_HOST=localhost-rabbitmq
+export RABBITMQ_HOST='localhost-rabbitmq'
 export RABBITMQ_PORT=5672
 export RABBITMQ_EXCHANGE='packtchat.log'
 
